--- a/i_dot_ai_backup_final_6.ipynb
+++ b/i_dot_ai_backup_final_6.ipynb
@@ -227,13 +227,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 37,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "p7jQ7qj5pu2C",
-        "outputId": "5c71931e-d26e-4775-9ebc-c16f0c8769f8"
+        "outputId": "25159dce-62ca-407b-8583-69d41b68307d"
       },
       "outputs": [
         {
@@ -465,7 +465,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 38,
       "metadata": {
         "id": "jl8VZIL7ssqG"
       },
@@ -504,20 +504,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 39,
       "metadata": {
         "id": "Oz8heNa4p00l",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2a88229a-ffe7-442b-89c3-54546f7700e4"
+        "outputId": "76749dfb-2416-4895-9717-402bf07a3a13"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Vision, expertise, leadership.\n"
+            "Vision, collaboration, innovation.\n"
           ]
         }
       ],
@@ -592,7 +592,7 @@
       "metadata": {
         "id": "-2zCLmTY8KDr"
       },
-      "execution_count": 14,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -1401,7 +1401,7 @@
       "metadata": {
         "id": "pKJ87zpWlQHo"
       },
-      "execution_count": 15,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -1550,7 +1550,7 @@
       "metadata": {
         "id": "ibl7juTa9F6C"
       },
-      "execution_count": 16,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -1612,7 +1612,7 @@
       "metadata": {
         "id": "xX5oOU7K9XaK"
       },
-      "execution_count": 17,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -1675,7 +1675,7 @@
         "\n",
         "    \"\"\") as iface:\n",
         "        gr.Markdown(\"\"\"\n",
-        "        # 🏢 Employee Onboarding Voice Conference\n",
+        "        # 🏢 Multi-Agent Collaboration for Employee Onboarding\n",
         "        \"\"\")\n",
         "\n",
         "        # Conversation state\n",
@@ -1818,13 +1818,13 @@
       "metadata": {
         "id": "I3_rVlDDL5pl"
       },
-      "execution_count": 18,
+      "execution_count": 44,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "#### Main App"
+        "#### **Main App**"
       ],
       "metadata": {
         "id": "kwn9rKf7_R49"
@@ -1835,19 +1835,20 @@
       "source": [
         "def main():\n",
         "    \"\"\"Launch the employee onboarding voice application with HR Manager as main entry point\"\"\"\n",
-        "    print(\"🚀 Starting Employee Onboarding Voice Conference with HR Manager as Main Entry Point...\")\n",
+        "    print(\"🚀 Starting Multi-Agent Collaboration for Employee Onboarding...\")\n",
         "    print(\"🏢 HR-Led Onboarding Scenario Active - HR Manager Primary Contact\")\n",
         "\n",
         "    for agent_name, voice_config in AGENT_VOICES.items():\n",
         "        print(f\"   {agent_name}: {voice_config['voice']} voice ({voice_config['description']})\")\n",
         "\n",
-        "    print(\"\\n🧠 HR Manager-Led Agent System:\")\n",
-        "    print(\"   - HR Manager serves as the main entry point for all onboarding questions\")\n",
-        "    print(\"   - Intelligent handoff to IT Staff for technical setup\")\n",
-        "    print(\"   - Handoff to Line Manager for team structure and role guidance\")\n",
-        "    print(\"   - Handoff to AI Colleague for general workplace support\")\n",
-        "    print(\"   - Natural language understanding drives all routing decisions\")\n",
-        "    print(\"   - Enhanced decision making using prompt_with_handoff_instructions\")\n",
+        "    print(\"   - INSTRUCTIONS:\")\n",
+        "    print(\"     1. Click the 'Record' button.\")\n",
+        "    print(\"     2. Allow microphone access when prompted by your browser.\")\n",
+        "    print(\"     3. Begin speaking, then click stop button when you finish.\")\n",
+        "    print(\"     4. Wait a few seconds for the transcription to complete (with a little flicker).\")\n",
+        "    print(\"     5. Click 'Send Audio'.\")\n",
+        "    print(\"     6. Wait a few seconds for the speech-to-text processing to finish.\")\n",
+        "\n",
         "\n",
         "    interface = create_gradio_interface()\n",
         "    interface.launch(\n",
@@ -1863,32 +1864,30 @@
         "id": "5z9UWq0N_AtY",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 819
         },
-        "outputId": "b4f8e923-7279-4b62-a417-909ef3c39bc1"
+        "outputId": "be6007d5-82f5-4371-9390-d4b641960df0"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "🚀 Starting Employee Onboarding Voice Conference with HR Manager as Main Entry Point...\n",
+            "🚀 Starting Multi-Agent Collaboration for Employee Onboarding...\n",
             "🏢 HR-Led Onboarding Scenario Active - HR Manager Primary Contact\n",
             "   HR Manager: alloy voice (Professional & Welcoming)\n",
             "   IT Staff: sage voice (Technical & Helpful)\n",
             "   Line Manager: echo voice (Supportive & Strategic)\n",
             "   AI Colleague: nova voice (Friendly & Collaborative)\n",
-            "\n",
-            "🧠 HR Manager-Led Agent System:\n",
-            "   - HR Manager serves as the main entry point for all onboarding questions\n",
-            "   - Intelligent handoff to IT Staff for technical setup\n",
-            "   - Handoff to Line Manager for team structure and role guidance\n",
+            "   - INSTRUCTIONS:\n",
+            "   - Click on Record button\n",
+            "   - Accept browser request to allo Handoff to Line Manager for team structure and role guidance\n",
             "   - Handoff to AI Colleague for general workplace support\n",
             "   - Natural language understanding drives all routing decisions\n",
             "   - Enhanced decision making using prompt_with_handoff_instructions\n",
             "Colab notebook detected. This cell will run indefinitely so that you can see errors and logs. To turn off, set debug=False in launch().\n",
-            "* Running on public URL: https://e0c6da65c5082e91e5.gradio.live\n",
+            "* Running on public URL: https://0af042de82f976ec1d.gradio.live\n",
             "\n",
             "This share link expires in 1 week. For free permanent hosting and GPU upgrades, run `gradio deploy` from the terminal in the working directory to deploy to Hugging Face Spaces (https://huggingface.co/spaces)\n"
           ]
@@ -1900,42 +1899,10 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              "<div><iframe src=\"https://e0c6da65c5082e91e5.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+              "<div><iframe src=\"https://0af042de82f976ec1d.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
             ]
           },
           "metadata": {}
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[debug] Processing voice input with HR Manager as main entry point\n",
-            "[debug] User: Good morning. I'm happy to be here.\n",
-            "[debug] get_welcome_info called\n",
-            "[debug] Final agent that responded: HR Manager\n",
-            "[debug] HR Manager: Good morning! We're thrilled to have you onboard! You're joining a group of passionate, supportive people who are here to help you succeed. Feel free to ask me anything about getting started, company culture, or where to find things.\n",
-            "[debug] Generating speech for HR Manager with voice 'alloy'\n",
-            "[debug] Processing voice input with HR Manager as main entry point\n",
-            "[debug] User: Thank you. Could you tell me who I will be working with?\n",
-            "[debug] get_team_info called with info_type: team structure\n",
-            "[debug] Final agent that responded: Line Manager\n",
-            "[debug] Line Manager: You'll be joining a dynamic team of 8 members! Here's how our structure looks:  - **3 Senior Developers**: They have extensive experience and will guide you through technical challenges. - **2 Product Managers**: They focus on aligning our products with customer needs and will involve you in planning. - **2 Designers**: They work on creating engaging user experiences, and you'll collaborate closely with them on projects.  We operate in cross-functional squads, which means you'll have the chance to work with all these roles as you contribute to our current initiatives. Your insights and skills will be valuable, and I'm excited to see how you'll make an impact!\n",
-            "[debug] Generating speech for Line Manager with voice 'echo'\n",
-            "[debug] Processing voice input with HR Manager as main entry point\n",
-            "[debug] User: I would like to know specifically what my first task will be, please.\n",
-            "[debug] get_team_info called with info_type: first_task\n",
-            "[debug] Final agent that responded: Line Manager\n",
-            "[debug] Line Manager: Your first task will be to complete our Standard Operating Procedure (SOP) training module. After reviewing the materials, you'll need to take a brief assessment to confirm your understanding.  I'm excited to have you on board and can't wait to discuss your initial projects and how you'll contribute to our current initiatives! Welcome to the team!\n",
-            "[debug] Generating speech for Line Manager with voice 'echo'\n",
-            "[debug] Processing voice input with HR Manager as main entry point\n",
-            "[debug] User: So, how do I get my systems ready for work? My laptop, please.\n",
-            "[debug] get_it_setup_info called with setup_type: laptop\n",
-            "[debug] Final agent that responded: IT Staff\n",
-            "[debug] IT Staff: To get your laptop ready for work, you'll need a bit of time for setup. Here’s what to expect:  1. **Laptop Model**: You can choose between a MacBook Pro M3 or a Dell XPS. 2. **Setup Time**: It typically takes 1-2 days to get everything configured. 3. **Software Installation**: I will install all necessary software for you. 4. **Meeting Schedule**: I’ll reach out to schedule some time with you this week to ensure everything is set up properly.  If you have any specific requirements or questions, feel free to ask!\n",
-            "[debug] Generating speech for IT Staff with voice 'sage'\n",
-            "Keyboard interruption in main thread... closing server.\n",
-            "Killing tunnel 127.0.0.1:7860 <> https://e0c6da65c5082e91e5.gradio.live\n"
-          ]
         }
       ]
     },
@@ -2537,13 +2504,6 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "r6v2T02CB5TD"
-      }
-    },
-    {
-      "cell_type": "markdown",
       "source": [
         "# **Reference**\n",
         "\n",
@@ -2576,7 +2536,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPKA0HTIl9Mz2GQlMdhYvjB",
+      "authorship_tag": "ABX9TyNTC7mMrkulsNYyYtNsxSCi",
       "include_colab_link": true
     },
     "kernelspec": {
